--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Forum App</title>
   <link rel="stylesheet" href="src/global.css" type="text/css">
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 <body>
   <div id="root"></div>
